--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,32 @@
 /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
+/* Document
+       ========================================================================== */
+/**
+     * 1. Correct the line height in all browsers.
+     * 2. Prevent adjustments of font size after orientation changes in
+     *    IE on Windows Phone and in iOS.
+     */
 html {
   line-height: 1.15;
-
-      -ms-text-size-adjust: 100%;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
   -webkit-text-size-adjust: 100%;
+  /* 2 */
 }
+
+/* Sections
+       ========================================================================== */
+/**
+     * Remove the margin in all browsers (opinionated).
+     */
 body {
   margin: 0;
 }
+
+/**
+     * Add the correct display in IE 9-.
+     */
 article,
 aside,
 footer,
@@ -16,77 +35,155 @@ nav,
 section {
   display: block;
 }
-h1 {
-  margin: 0.67em 0;
 
+/**
+     * Correct the font size and margin on `h1` elements within `section` and
+     * `article` contexts in Chrome, Firefox, and Safari.
+     */
+h1 {
   font-size: 2em;
+  margin: 0.67em 0;
 }
+
+/* Grouping content
+       ========================================================================== */
+/**
+     * Add the correct display in IE 9-.
+     */
 figcaption,
 figure {
   display: block;
 }
+
+/**
+     * Add the correct margin in IE 8.
+     */
 figure {
   margin: 1em 40px;
 }
-hr {
-  overflow: visible;
 
+/**
+     * 1. Add the correct box sizing in Firefox.
+     * 2. Show the overflow in Edge and IE.
+     */
+hr {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
+  /* 1 */
   height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
 }
+
+/**
+     * Add the correct display in IE.
+     */
 main {
   display: block;
 }
+
+/**
+     * 1. Correct the inheritance and scaling of font size in all browsers.
+     * 2. Correct the odd `em` font sizing in all browsers.
+     */
 pre {
   font-family: monospace, monospace;
+  /* 1 */
   font-size: 1em;
+  /* 2 */
 }
+
+/* Links
+       ========================================================================== */
+/**
+     * 1. Remove the gray background on active links in IE 10.
+     * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
+     */
 a {
   background-color: transparent;
-
+  /* 1 */
   -webkit-text-decoration-skip: objects;
+  /* 2 */
 }
+
+/* Text-level semantics
+       ========================================================================== */
+/**
+     * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
+     * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+     */
 abbr[title] {
-          text-decoration: underline;
-          text-decoration: underline dotted;
-
   border-bottom: none;
-
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
   -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+  /* 2 */
 }
+
+/**
+     * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+     */
 b,
 strong {
   font-weight: inherit;
 }
+
+/**
+     * Add the correct font weight in Chrome, Edge, and Safari.
+     */
 b,
 strong {
   font-weight: bolder;
 }
+
+/**
+     * 1. Correct the inheritance and scaling of font size in all browsers.
+     * 2. Correct the odd `em` font sizing in all browsers.
+     */
 code,
 kbd,
 samp {
   font-family: monospace, monospace;
+  /* 1 */
   font-size: 1em;
+  /* 2 */
 }
+
+/**
+     * Add the correct font style in Android 4.3-.
+     */
 dfn {
   font-style: italic;
 }
+
+/**
+     * Add the correct background and color in IE 9-.
+     */
 mark {
-  color: #000000;
-  background-color: #ffff00;
+  background-color: #ff0;
+  color: #000;
 }
+
+/**
+     * Add the correct font size in all browsers.
+     */
 small {
   font-size: 80%;
 }
+
+/**
+     * Prevent `sub` and `sup` elements from affecting the line height in
+     * all browsers.
+     */
 sub,
 sup {
-  position: relative;
-
-  vertical-align: baseline;
-
   font-size: 75%;
   line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sub {
@@ -96,55 +193,108 @@ sub {
 sup {
   top: -0.5em;
 }
+
+/* Embedded content
+       ========================================================================== */
+/**
+     * Add the correct display in IE 9-.
+     */
 audio,
 video {
   display: inline-block;
 }
+
+/**
+     * Add the correct display in iOS 4-7.
+     */
 audio:not([controls]) {
   display: none;
-
   height: 0;
 }
+
+/**
+     * Remove the border on images inside links in IE 10-.
+     */
 img {
   border-style: none;
 }
+
+/**
+     * Hide the overflow in IE.
+     */
 svg:not(:root) {
   overflow: hidden;
 }
+
+/* Forms
+       ========================================================================== */
+/**
+     * 1. Change the font styles in all browsers (opinionated).
+     * 2. Remove the margin in Firefox and Safari.
+     */
 button,
 input,
 optgroup,
 select,
 textarea {
-  margin: 0;
-
   font-family: sans-serif;
+  /* 1 */
   font-size: 100%;
+  /* 1 */
   line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
 }
+
+/**
+     * Show the overflow in IE.
+     */
 button {
   overflow: visible;
 }
+
+/**
+     * Remove the inheritance of text transform in Edge, Firefox, and IE.
+     * 1. Remove the inheritance of text transform in Firefox.
+     */
 button,
 select {
+  /* 1 */
   text-transform: none;
 }
+
+/**
+     * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+     *    controls in Android 4.
+     * 2. Correct the inability to style clickable types in iOS and Safari.
+     */
 button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
+  /* 2 */
 }
 
-
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  /**
+       * Remove the inner border and padding in Firefox.
+       */
+  /**
+       * Restore the focus styles unset by the previous rule.
+       */
+}
 
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  padding: 0;
-
   border-style: none;
+  padding: 0;
 }
 
 button:-moz-focusring,
@@ -153,72 +303,354 @@ button:-moz-focusring,
 [type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
+
+/**
+     * Show the overflow in Edge.
+     */
 input {
   overflow: visible;
 }
+
+/**
+     * 1. Add the correct box sizing in IE 10-.
+     * 2. Remove the padding in IE 10-.
+     */
 [type="checkbox"],
 [type="radio"] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  /* 1 */
   padding: 0;
+  /* 2 */
 }
+
+/**
+     * Correct the cursor style of increment and decrement buttons in Chrome.
+     */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
-[type="search"] {
-  outline-offset: -2px;
 
+/**
+     * 1. Correct the odd appearance in Chrome and Safari.
+     * 2. Correct the outline style in Safari.
+     */
+[type="search"] {
   -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+  /**
+       * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+       */
 }
 
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
+[type="search"]::-webkit-search-cancel-button, [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
-::-webkit-file-upload-button {
-  font: inherit;
 
+/**
+     * 1. Correct the inability to style clickable types in iOS and Safari.
+     * 2. Change font properties to `inherit` in Safari.
+     */
+::-webkit-file-upload-button {
   -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
 }
+
+/**
+     * Correct the padding in Firefox.
+     */
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
-legend {
-  display: table;
 
+/**
+     * 1. Correct the text wrapping in Edge and IE.
+     * 2. Correct the color inheritance from `fieldset` elements in IE.
+     * 3. Remove the padding so developers are not caught out when they zero out
+     *    `fieldset` elements in all browsers.
+     */
+legend {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  /* 1 */
+  display: table;
+  /* 1 */
   max-width: 100%;
+  /* 1 */
   padding: 0;
-
-  white-space: normal;
-
+  /* 3 */
   color: inherit;
+  /* 2 */
+  white-space: normal;
+  /* 1 */
 }
+
+/**
+     * 1. Add the correct display in IE 9-.
+     * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
+     */
 progress {
   display: inline-block;
-
+  /* 1 */
   vertical-align: baseline;
+  /* 2 */
 }
+
+/**
+     * Remove the default vertical scrollbar in IE.
+     */
 textarea {
   overflow: auto;
 }
+
+/* Interactive
+       ========================================================================== */
+/*
+     * Add the correct display in Edge, IE, and Firefox.
+     */
 details {
   display: block;
 }
+
+/*
+     * Add the correct display in all browsers.
+     */
 summary {
   display: list-item;
 }
+
+/*
+     * Add the correct display in IE 9-.
+     */
 menu {
   display: block;
 }
+
+/* Scripting
+       ========================================================================== */
+/**
+     * Add the correct display in IE 9-.
+     */
 canvas {
   display: inline-block;
 }
+
+/**
+     * Add the correct display in IE.
+     */
 template {
   display: none;
 }
+
+/* Hidden
+       ========================================================================== */
+/**
+     * Add the correct display in IE 10-.
+     */
 [hidden] {
   display: none;
+}
+
+/* xl */
+/* lg */
+/* md */
+/* sm */
+/* xs */
+/* xx */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  max-width: 1380px;
+  margin: 0 auto;
+  background-color: #d8b036;
+  background-image: url(../img/global-bg.jpg);
+  background-attachment: fixed;
+  background-position: top center;
+  background-size: cover;
+  opacity: 1;
+  -webkit-transition: opacity 1s ease 0s;
+  -o-transition: opacity 1s ease 0s;
+  transition: opacity 1s ease 0s;
+}
+
+html {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1.5em;
+}
+
+a {
+  text-decoration: none;
+  color: #eeeeee;
+}
+
+.header {
+  overflow: hidden;
+  min-height: 100px;
+  margin-bottom: 30px;
+  border-radius: 0 0 7px 7px;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.header-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-logo__image {
+  display: block;
+}
+
+.header-logo__title {
+  display: block;
+  margin-bottom: 15px;
+  text-align: center;
+  letter-spacing: 5px;
+  color: #eeeeee;
+  font-family: "Lora", serif;
+  font-weight: 300;
+}
+
+.header-logo__description {
+  display: block;
+  text-align: center;
+  color: #eeeeee;
+}
+
+.header-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: rgba(0, 0, 0, 0.3);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header-menu__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.header-menu__list-item a {
+  display: block;
+  margin: 5px;
+  padding: 10px 15px;
+  border-radius: 4px;
+}
+
+.header-menu__list-item a:hover, .header-menu__list-item a:focus {
+  color: #e12727;
+  background: rgba(0, 0, 0, 0.3);
+  text-shadow: 1px 1px 3px #000000, 1px 1px 10px #000000;
+}
+
+.header-menu__list-item.active a {
+  color: #bb1a1a;
+  background: rgba(0, 0, 0, 0.4);
+  text-shadow: 1px 1px 3px #000000, 1px 1px 10px #000000;
+}
+
+@media (min-width: 768px) {
+  .header-logo {
+    padding: 45px 15px;
+  }
+  .header-logo__image {
+    max-width: 400px;
+    margin-bottom: 30px;
+  }
+  .header-logo__title {
+    font-size: 3rem;
+    line-height: 3.5rem;
+  }
+  .header-logo__description {
+    letter-spacing: 0.2em;
+    font-weight: 700;
+  }
+  .header-menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media (min-width: 1200px) {
+  body {
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 1199.8px) {
+  body {
+    padding: 0 15px;
+  }
+}
+
+@media (max-width: 767.8px) {
+  .header-logo {
+    padding: 15px 15px;
+  }
+  .header-logo__description {
+    letter-spacing: 0.1em;
+    font-size: 0.875rem;
+    line-height: 1.25em;
+  }
+  .header-menu__list {
+    display: none;
+    width: 100%;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media (max-width: 767.8px) and (min-width: 480px) {
+  .header-logo__image {
+    max-width: 300px;
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 767.8px) and (min-width: 576px) {
+  .header-logo__title {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (max-width: 575.8px) {
+  .header-logo__title {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media (max-width: 479.8px) {
+  .header-logo__image {
+    width: 80%;
+    margin-bottom: 15px;
+  }
 }
