--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -31,6 +31,11 @@ html {
 a {
     text-decoration: none;
     color: $color-light;
+
+    &:hover,
+    &:focus {
+        color: $color-accent;
+    }
 }
 
 .container {
