--- a/assets/scss/widgets/_search.scss
+++ b/assets/scss/widgets/_search.scss
@@ -14,6 +14,17 @@
         border-radius: 4px;
         background: rgba(238, 238, 238, 0.1);
         font-size: 0.85rem;
+
+        &::placeholder {
+            color: $color-gray;
+        }
+
+        &:focus {
+            color: $color-light;
+            border: 1px solid rgba(238, 238, 238, 0.3);
+            outline: none;
+            background: rgba(238, 238, 238, 0.2);
+        }
     }
 
     &__submit {
