--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -6,12 +6,22 @@
         margin-right: -7.5px;
         margin-left: -7.5px;
 
+        @include md {
+            flex-wrap: wrap;
+        }
+
         &__item {
             padding: 0 7.5px;
             color: $color-light;
             
             @include md-min {
                 flex: 0 0 25%;
+            }
+            @include md-xs {
+                flex: 0 0 50%;
+            }
+            @include xs {
+                width: 100%;
             }
         }
     }
