--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -9,6 +9,11 @@
         padding: 0;
         list-style: none;
 
+        &.active {
+            display: flex;
+            flex-direction: column;
+        }
+
         @include sm-min {
             display: flex;
         }
@@ -26,6 +31,11 @@
                 padding: 10px 15px;
                 border-radius: 4px;
     
+                @include sm {
+                    margin-top: 0;
+                    margin-bottom: 0;
+                }
+
                 &:hover,
                 &:focus {
                     color: $color-accent;
@@ -39,7 +49,48 @@
                background: rgba(0, 0, 0, 0.4);
                @include text-shadow;
             }
+        }    
+    }
+
+    &__btn {
+        flex-direction: column;
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
+        background: rgba(0, 0, 0, 0.2);
+        align-items: center;
+        justify-content: center;
+ 
+        &.active {
+            & .header-menu__btn-row:first-child {
+                top: 6px;
+                transform: rotate(-135deg);
+            }
+
+            & .header-menu__btn-row:nth-child(2) {
+                opacity: 0;
+            }
+
+            & .header-menu__btn-row:last-child {
+                top: -6px;
+                transform: rotate(-225deg);
+            }
         }
-         
+
+        @include sm {
+            display: flex;
+        }
+        @include sm-min {
+            display: none;
+        }
+
+        &-row {
+            position: relative;
+            width: 60%;
+            height: 2px;
+            margin: 2px 0;
+            transition: 0.5s;
+            background-color: #eeeeee;
+        }
     }
 }
